# frankmark

./: Cargo.toml  README.MD  index.html
.github/workflows/: deploy.yml
assets/: template.html
demo/: frankmark.toml
demo/Demo/: Example.md
demo/Introduction/: Installation.md
example/: frankmark.toml
example/Demo/: Example.md
example/Introduction/: Hello-World.md  Installation.md
lib/markdown-rs/: Cargo.toml
lib/markdown-rs/mdast_util_to_markdown/: Cargo.toml
lib/markdown-rs/src/: lib.rs  to_html_frankenui.rs
output/Changelog/: Last.html
output/Demo/: Example.html  Portal.html
output/Introduction/: Hello-World.html  Installation.html
output/Portal/: Intro.html
src/: config.rs  error.rs  generator.rs  main.rs  models.rs  navigation.rs  parser.rs  template.rs  utils.rs
templates/: main.html
