[workspace]
members = [
    "lib/markdown-rs",
    "lib/markdown-rs/generate",
    "lib/markdown-rs/mdast_util_to_markdown",
]

[package]
name = "frankmark"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
rand = "0.9.2"
toml = { version = "0.9.2", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
markdown = { path = "lib/markdown-rs" }